Revision history for Perl extension {{$dist->name}}

{{$NEXT}}

1.110732  2011-11-18T04:06:06Z
    - Change /\h/ to /[ \t]/ for compatibility with older perls.
      Thanks to David Golden for reporting [rt-71961]

1.110731  2011-11-18T03:28:34Z
    - Ensure verbatim pod becomes verbatim markdown
      by increasing indentation if necessary [rt-72414]
    - Co-maintainership granted to RWSTAUNER

1.110730  2011-03-14 10:11:52 Europe/Vienna
    - make bulleted lists work at least minimally (thanks ap)

1.103491  2010-12-15 23:03:02 Europe/Vienna
    - added Ryan C. Thompson's email address

1.103490  2010-12-15 16:12:31 Europe/Vienna
    - improved L<> link handling
    - Enabled interpolation of I<these thingies> in headers

1.100860  2010-03-27 14:31:43 Europe/Vienna
    - converted the distribution to Dist::Zilla-style
    - bin/pod2markdown now uses '#!/usr/bin/env perl'

0.02 Sun Oct  4 16:30:06 CEST 2009 (Marcel Gruenauer <marcel@cpan.org>)
    - E<foo> now outputs '&foo;'
    - only generate meta tags if asked to

0.01  2009-10-04T12:24:45Z (Marcel Gruenauer <marcel@cpan.org>)
    - original version